# advent-of-code

./: .gitignore  Cargo.toml  README.md  advent-of-code.cabal  createNewPuzzleTemplate.sh  go.mod  go.sum
2015/Day-1/Part-1/rust-2015-1-1/: Cargo.toml
2015/Day-1/Part-2/rust-2015-1-2/: Cargo.toml
2015/Day-2/Part-1/rust-2015-2-1/: Cargo.toml
2019/Day-1/Part-1/go/: puzzle.go
2019/Day-1/Part-1/rust-2019-1-1/: Cargo.toml
2019/Day-1/Part-2/go/: puzzle.go
2019/Day-1/Part-2/rust-2019-1-2/: Cargo.toml
2019/Day-2/Part-1/go/: puzzle.go
2019/Day-2/Part-1/rust-2019-2-1/: Cargo.toml
2019/Day-2/Part-2/go/: puzzle.go
2019/Day-2/Part-2/rust-2019-2-2/: Cargo.toml
2019/Day-3/Part-1/go/: puzzle.go
2024/Day-1/Part-1/awk/: README  total-distance.awk
2024/Day-1/Part-1/go/: total-distance.go
2024/Day-1/Part-1_total-distance/awk/: total-distance.sh
2024/Day-1/Part-1_total-distance/go/: total-distance  total-distance.go
2024/Day-1/Part-2/: puzzle-text
2024/Day-1/Part-2/awk/: similarity-score.awk
2024/Day-1/Part-2/go/: similarity-score.go
2024/Day-1/Part-2_similarity-score/go/: similarity-score.go
2024/Day-10/Part-1/go/: topographic-map.go
2024/Day-10/Part-2/go/: puzzle.go
2024/Day-11/Part-2/go/: puzzle.go  (+1 more)
2024/Day-13/Part-1/: puzzle-text
2024/Day-14/Part-1/: puzzle-text
2024/Day-2/Part-2/: puzzle-text
aocutil/haskell/: AocUtils.hs  aoc-util.hs
aocutil/rust/aoc/: Cargo.toml
templates/: template-awk  template-go  template-haskell  template-rust
templates/idea-workspace-additions/: go.ed
templates/recipes/: awk.sh  go.sh  haskell.sh  rust.sh
(+67 files in other folders)
